deps/crates/vendor/rustversion/tests/ui/const-not-fn.stderr
error: only allowed on a fn item
 --> tests/ui/const-not-fn.rs:1:28
  |
1 | #[rustversion::attr(all(), const)]
  |                            ^^^^^
