deps/crates/vendor/rustversion/tests/ui/const-not-fn.rs
#[rustversion::attr(all(), const)]
pub struct S;

fn main() {}
